
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearhorizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textAppearance="?android:attr/textAppearanceMedium" />

       

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvid"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:text="@string/tvpesquisar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/btdroga" />

            <Button
                android:id="@+id/button2"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/btdoenca" />

            <Button
                android:id="@+id/button3"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/btlimpar" />

			<!--klkllklk
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:text="@string/prox" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.43"
                android:text="@string/anterior" />
			-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp" >

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvresultadopesquisa"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>
